v1.0.2 Fixed alignment issue for last input field in grid (css only)

--- a/filter-grid.css
+++ b/filter-grid.css
@@ -38,12 +38,12 @@
         max-width: 30rem;
     }
 
-    select {
+    select.form-control {
         min-width: 13.5rem;
         width: 100%;
     }
 
-    select[readonly='readonly'] {
+    select.form-control[readonly='readonly'] {
         user-select: none;
         pointer-events: none;
         background-color: var(--FORM-CONTROL-BACKGROUND-COLOR, #f9f9f9);
